Remove some bug
Remove perfect-scrollbar, fix control button display bug

Update packge version

--- a/src/styles/lib.scss
+++ b/src/styles/lib.scss
@@ -6,6 +6,10 @@
   display: none;
 }
 
+.control-page{
+  display: none;
+}
+
 .book{
   .page{
     .content{
